<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="create">Create</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="login">LogIn</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="Registration">Register</string>
</resources>