<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
  <com.google.android.material.card.MaterialCardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="40dp"
      app:cardCornerRadius="20dp"
      android:id="@+id/cardView"
      android:backgroundTint="#FFCCBC"
      app:cardElevation="20dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="18dp"
          android:hint="@string/enter_email"
          android:id="@+id/emailEt"/>
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="18dp"
          android:inputType="textPassword"
          android:drawableEnd="@drawable/visibility_off_24"
          android:hint="@string/password"
          android:id="@+id/passwordEt"/>
      <com.google.android.material.button.MaterialButton
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="#BA1430"
          android:layout_margin="8dp"
          android:text="@string/login"
          android:id="@+id/Login"/>

    </LinearLayout>

  </com.google.android.material.card.MaterialCardView>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="-200dp"
      app:layout_constraintTop_toBottomOf="@id/cardView"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/create_a_new_account"
        android:gravity="end"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/create"
        android:textColor="#E61E63"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:id="@+id/create"/>


  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>